Security: newInstance() did not enforce its denylist on the named-parameter path
Fixes the constructor-injection RCE reported against json-io 4.108.0. json-io
performs no security checks of its own -- it reads a class name from untrusted
input (@type) and delegates instantiation here -- so the fix belongs in java-util.

The report characterized the defect as an incomplete denylist. It was worse: the
denylist was not enforced at all on the path the PoC used. newInstance() routes a
Map of named arguments to newInstanceWithNamedParameters(), which never called
SecurityChecker.verifyClass() -- only the positional fallback did. So a class the
checker itself reported as blocked was constructed anyway (isSecurityBlocked
returned true for a ClassLoader subclass while newInstance ran its constructor),
and merely adding the gadget class to the list would NOT have closed the PoC.

- Gate now runs once at the public chokepoint, outside every try: a
  SecurityException raised deeper was swallowed by the fallback handlers that
  retry on Exception. Re-asserted inside newInstanceWithNamedParameters.
- verifyClass() now applies the blocked-package prefixes. They lived only in
  isSecurityBlockedName() and applied only when loading by name, so a class
  already in hand from a blocked package passed. Identity, name, prefix, and
  supertype checks are now unified behind one gate used by both layers.
- The enclosing class of an inner class gets its own verdict; it is constructed
  too, and is verified outside the catch-all that would silently swallow it.
- Denylist expanded by supertype NAME so one entry covers a family without a
  dependency on the library: ApplicationContext/BeanFactory (the reported
  gadget), JNDI, Templates, ObjectInputStream, constructors that do network I/O
  or create/truncate files, Rhino/BeanShell/Jython/GroovyShell, rmi/jmx-remote.
  Read-side file I/O stays constructible -- opening a read handle is not a side
  effect on the order of spawning a process. Met